Sprint 7 - Phase 1-3: LGPD Request Workflow and Notifications (Backend)
LGPD-S07-01: Improve LGPD Request Workflow
- Add 6 new statuses: IN_ANALYSIS, WAITING_CONTROLLER, WAITING_LEGAL_REVIEW, WAITING_DATA_SUBJECT, PARTIALLY_COMPLETED, CANCELLED
- Implement status transition validation with state machine rules
- Require rejection reason and completion notes
- Create generic transitionStatus() method with authorization checks

LGPD-S07-02: Status Change Notifications (Backend Core)
- Create LgpdRequestNotificationEntity and V18 migration
- Implement async notification service with retry logic
- Create notification provider interfaces (Email, Internal)
- Notifications for: REQUEST_CREATED, STATUS_CHANGED, RESPONSIBILITY_ASSIGNED, REQUEST_COMPLETED, REQUEST_REJECTED, COMPLEMENT_REQUESTED
- 3 new API endpoints for workflow management
- Add 4 new service methods to LgpdService
- Full authorization checks and multi-tenant isolation

Domain Changes:
- LgpdRequestStatus: expand with IN_ANALYSIS, WAITING_CONTROLLER, WAITING_LEGAL_REVIEW, WAITING_DATA_SUBJECT, PARTIALLY_COMPLETED, CANCELLED
- LgpdRequest: update isTerminal() to include new terminal states
- Create enums: LgpdNotificationType, NotificationChannel, NotificationStatus

Database Changes:
- V18__add_lgpd_request_notifications.sql creates tb_lgpd_request_notification table with retry/delivery tracking

Service Layer:
- LgpdRequestNotificationService: async notification dispatch with retry mechanism (3 attempts, exponential backoff)
- NotificationProvider port: abstraction for email/internal notifications
- EmailNotificationProviderImpl: sends HTML+plain text emails via configured mail sender
- InternalNotificationProviderImpl: stub for future inbox integration
- LgpdService enhancements: transitionStatus(), requestDataSubjectComplement(), cancelRequest(), getAvailableTransitions()

API Layer:
- DTOs: LgpdRequestTransitionRequest, RequestComplementRequest, CancelRequestRequest
- Endpoints: /transition-status, /reques